--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <p><a href="/">WEB</a>STUDIO</p>
+        <a href="/"><span>WEB</span>STUDIO</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -128,7 +128,7 @@
     </main>
 
     <footer>
-      <p><a href="/">WEB</a>STUDIO</p>
+      <a href="/"><span>WEB</span>STUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
