--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
   <body>
     <header>
       <nav>
-        <a href="/"><span>WEB</span>STUDIO</a>
+        <a href="./index.html">WEBSTUDIO</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+11 (000) 111-11-11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tell:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
 
     <main>
@@ -128,7 +130,7 @@
     </main>
 
     <footer>
-      <a href="/"><span>WEB</span>STUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
