--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WEBSTUDIO</a>
+        <p><a href="./index.html">WEBSTUDIO</a></p>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -19,6 +19,7 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+
           <li><a href="tell:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
