--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          
+
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
@@ -131,7 +131,7 @@
     </main>
 
     <footer>
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./goit-markup-hw-01/index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
