--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="./goit-markup-hw-01/index.html">WEBSTUDIO</a>
+        <a href="./index.html">WEBSTUDIO</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -131,7 +131,7 @@
     </main>
 
     <footer>
-      <a href="./goit-markup-hw-01/index.html">WEBSTUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
